--- a/trafego/src/main/resources/templates/home/index.html
+++ b/trafego/src/main/resources/templates/home/index.html
@@ -47,15 +47,15 @@
                     <span>Dashboard</span></a>
             </li>
 
+            <!-- Nav Item - Admin -->
+            <li class="nav-item">
+                <a class="nav-link" href="/administradores">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>ADMIN</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
-
-            <!-- Nav Item -->
-            <li class="nav-item">
-                <a class="nav-link" href="teste.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Teste</span></a>
-            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
