Exclusão de admins (tbm removendo do BD)

--- a/trafego/src/main/resources/static/css/styles.css
+++ b/trafego/src/main/resources/static/css/styles.css
@@ -2507,6 +2507,7 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #f6c23e;
   border-color: #f6c23e;
+  align-self: center;
 }
 
 .btn-warning:hover {
