--- a/trafego/src/main/resources/templates/administradores/newAdmin.html
+++ b/trafego/src/main/resources/templates/administradores/newAdmin.html
@@ -120,7 +120,7 @@
                     <p class="mb-4">Cadastrar novo admin do sistema</a>.</p>
 
                     <div class="card shadow mb-4" style="padding: 30px;">
-                        <form method="POST" action="/administradores/criar" onsubmit="return confirm('Confirmar ação')">
+                        <form method="POST" action="/administradores/criar" onsubmit="return confirm('Adicionar novo admin?')">
                             <div class="form-group">
                                 <label for="nome">Nome</label>
                                 <input type="text" class="form-control" required id="nome" name="nome" placeholder="Digite o seu nome">
