Novas páginas do sistema (infrações, acidentes e placas)

--- a/trafego/src/main/resources/templates/home/index.html
+++ b/trafego/src/main/resources/templates/home/index.html
@@ -26,13 +26,34 @@
 
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <i class=""></i>
                     <span>Dashboard</span></a>
             </li>
 
             <hr class="sidebar-divider">
 
             <div class="sidebar-heading">Menu</div>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/infracoes">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Infrações</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/acidentes">
+                    <i class="fas fa-ambulance"></i>
+                    <span>Acidentes</span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="/acidentes">
+                    <i class="fas fa-fw fa-exclamation-triangle"></i>
+                    <span>Placas inválidas</span>
+                </a>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/administradores">
