--- a/trafego/src/main/resources/templates/administradores/editAdmin.html
+++ b/trafego/src/main/resources/templates/administradores/editAdmin.html
@@ -36,7 +36,7 @@
             <hr class="sidebar-divider my-0">
 
             <li class="nav-item">
-                <a class="nav-link" href="/">
+                <a class="nav-link" href="/home">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
